# backend-max

./: .env.example  .env.local  .env.prod  .env.staging  .gitignore  ADVANCED_FLOW_IMPLEMENTED.md  CHANGELOG_UV_MIGRATION.md  DEPLOYMENT.md  Dockerfile.prod  FLOW_CORRECTED.md  FLOW_IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  MIGRATION_TO_UV.md  Makefile  NEW_FLOW_IMPLEMENTED.md  README.backend.md  README.deployment.md  README.md  RESET_FUNCTIONALITY_IMPLEMENTED.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  example_phone_usage.py  insomnia_collection.json  logging_config.py  pyproject.toml  test_api_integration.py  test_frontend_backend_integration.py  test_websocket_integration.py
alembic/: env.py
alembic/versions/: 001_create_conversation_models.py  001_initial_database_schema.py
app/: __init__.py  config.py  main.py
app/api/: auth.py  contatos.py  contatos_mock.py  dashboard.py  dashboard_mock.py  health.py  processos.py  processos_mock.py  webhooks.py  websocket.py  whatsapp_messages.py
app/core/: __init__.py  database.py  redis.py
app/middleware/: security_middleware.py
app/models/: __init__.py  client.py  conversation.py  legal_case.py  user.py
app/schemas/: __init__.py  contatos.py  dashboard.py  processos.py
app/services/: __init__.py  analytics_service.py  background_tasks.py  conversation_service.py  error_handler.py  flow_engine.py  handoff_service.py  (+9 more)
config/: logging.py  monitoring.py  production.py  secrets.py  webhook_security.py  whatsapp.py
docs/: API_TESTING_GUIDE.md  CLEAN_LOGS_IMPLEMENTED.md  CONVERSATION_FLOW.md  DATABASE_SETUP.md  DUPLICATE_MESSAGES_FIXED.md  INTERACTIVE_LIST_IMPLEMENTED.md  MINIMAL_LOGGING_IMPLEMENTED.md  MULTIPLE_WEBHOOKS_EXPLAINED.md  MVP_STATUS.md  PROCESS_TRACKING_IMPLEMENTED.md  README.deployment.md  SWAGGER_SETUP.md  ULTRA_CLEAN_LOGS.md  WEBHOOK_ACTIVITY_EXPLAINED.md  WEBHOOK_TOKEN_FIX.md  WHATSAPP_MESSAGE_TYPES.md  WHATSAPP_SETUP.md  renew_token_guide.md
examples/: whatsapp_message_examples.py
monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml  promtail.yml
nginx/: nginx.conf
scripts/: backup.sh  check_whatsapp_compliance.py  deploy.sh  init-db.sql  rollback.sh  seed_database.py  setup-production.sh  setup_database.py  test_whatsapp_integration.py
tests/: TEST_SUMMARY.md  conftest.py  test_analytics_service.py  test_api_integration.py  test_conversation.py  test_conversation_scenarios.py  test_e2e_conversations.py  test_e2e_runner.py  test_e2e_simple.py  test_error_handler.py  test_escape_commands.py  test_flow_engine.py  test_handoff_service.py  test_main.py  test_message_builder.py  test_monitoring_service.py  test_performance_load.py  test_phone_format.py  test_scheduling_service.py  test_security_middleware.py  test_security_service.py  test_state_manager.py  test_timeout_service.py  test_validation_service.py  test_webhook.py  test_webhooks.py  test_whatsapp_client.py
(+196 files in other folders)
